--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -10,10 +10,9 @@
       bindings = <BINDINGS>; \
   };
 
+/* macro: */
+MACRO(nav, &macro_tap &kp K_CANCEL &macro_press &mo NAV &macro_pause_for_release &macro_release &mo NAV, 0, 0)
+MACRO(sym, &macro_tap &kp K_CANCEL &macro_press &mo SYM &macro_pause_for_release &macro_release &mo SYM, 0, 0)
 
-/* layers */
-MACRO(nav, &macro_tap &macro_press &mo NAV &macro_pause_for_release &macro_release &mo NAV, 0, 0)
-MACRO(sym, &macro_tap &macro_press &mo SYM &macro_pause_for_release &kp K_CANCEL &macro_release &mo SYM, 0, 0)
-
-MACRO(navW, &macro_tap &macro_press &mo NAVW &macro_pause_for_release &kp K_CANCEL &macro_release &mo NAVW, 0, 0)
-MACRO(symW, &macro_tap &macro_press &mo SYMW &macro_pause_for_release &kp K_CANCEL &macro_release &mo SYMW, 0, 0)
+MACRO(navW, &macro_tap &kp K_CANCEL &macro_press &mo NAVW &macro_pause_for_release &macro_release &mo NAVW, 0, 0)
+MACRO(symW, &macro_tap &kp K_CANCEL &macro_press &mo SYMW &macro_pause_for_release &macro_release &mo SYMW, 0, 0)
