--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -30,9 +30,7 @@ COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 COMBO(zthal, &kp N, 23 24, ARAQ) // ى
 COMBO(YA2, &kp Z, 20 21, ARAQ) // ئ
 
-COMBO(dot, &kp DOT, 16 17, SYM SYMW) // .
-COMBO(comma, &kp COMMA, 17 18, SYM SYMW) // ,
-COMBO(space_sym, &kp SPACE, 21 22, SYM SYMW) // space on symbols
+COMBO(space, &kp SPACE, 12 13, SYM SYMW) // space on sym
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ CUS CUSW)
@@ -43,58 +41,23 @@ COMBO(left_brace, &kp LBRC, 3 13, COL COLW ARAQ CUS CUSW)
 COMBO(right_brace, &kp RBRC, 6 16, COL COLW ARAQ CUS CUSW)
 
 /* Text processing */
-COMBO(cut, &kp LG(X), 11 20 , COL CUS)
-COMBO(copy, &kp LG(C), 12 21, COL CUS)
-COMBO(paste, &kp LG(V), 20 21 22, COL CUS)
-
 COMBO(redo, &kp LG(LS(Z)), 3 4, COL CUS)
 COMBO(undo, &kp LG(Z), 13 14, COL CUS)
-COMBO(select_all, &kp LG(A), 1 2 3, COL CUS)
 
-COMBO(cutw, &kp LC(X), 11 20, COLW ARAQ CUSW)
-COMBO(copyw, &kp LC(C), 12 21, COLW ARAQ CUSW)
-COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ CUSW)
-
-COMBO(redow, &kp LC(LS(Z)), 3 4, COLW ARAQ CUSW)
+COMBO(redow, &kp LC(Y), 3 4, COLW ARAQ CUSW)
 COMBO(undow, &kp LC(Z), 13 14, COLW ARAQ CUSW)
-COMBO(select_allw, &kp LC(A), 1 2 3, COLW ARAQ CUSW)
 
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ CUS CUSW)
 
-/* one hand */
-COMBO(nav1h, &macro_nav, 26 27, COL CUS)
-COMBO(sym1h, &macro_sym, 28 29, COL CUS)
-
-COMBO(nav1hw, &macro_navW, 26 27, COLW ARAQ CUSW)
-COMBO(sym1hw, &macro_symW, 28 29, COLW ARAQ CUSW)
-
-COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COL CUS)
-COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ CUSW)
-
-
-/*                KEY POSITIONS
-
-  ╭────────────────────╮ ╭────────────────────╮
-  │  0   1   2   3   4 │ │  5   6   7   8   9 │
-  │ 10  11  12  13  14 │ │ 15  16  17  18  19 │
-  │     20  21  22     │ │     23  24  25     │
-  ╰───────────╮ 26  27 │ │ 28  29 ╭───────────╯
-              ╰────────╯ ╰────────╯            */
-
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 26 29, COL CUS)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL CUS)
+COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 11 26, COL CUS)
+COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 11 26, COLW ARAQ CUSW)
 
 COMBO(pwrtys, &kp LG(SPACE), 26 29, COLW ARAQ CUSW)
 COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ CUSW)
 
 COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ CUS CUSW)
-COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ CUS CUSW)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ CUS CUSW)
-COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ CUS CUSW)
-
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL CUS)
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ CUSW)
+COMBO(key_repeat, &key_repeat, 23 24, COL COLW ARAQ CUS CUSW)
 
 COMBO(lock_screen, &kp LG(LC(Q)), 6 7 8, NAV)
 COMBO(lock_screenw, &kp LG(L), 6 7 8, NAVW)
@@ -115,7 +78,7 @@ GCOMBO(switch_to_cus_win, &to CUSW, 18 19 29)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 11 12 13, NAV NAVW)
-COMBO(bt_0, &bt BT_SEL 0, 20 21, NAV NAVW)
-COMBO(bt_1, &bt BT_SEL 1, 21 22, NAV NAVW)
-COMBO(bt_2, &bt BT_SEL 2, 1 2, NAV NAVW)
-COMBO(bt_3, &bt BT_SEL 3, 2 3, NAV NAVW)
+COMBO(bt_0, &bt BT_SEL 0, 1 2, NAV NAVW)
+COMBO(bt_1, &bt BT_SEL 1, 2 3, NAV NAVW)
+COMBO(bt_2, &bt BT_SEL 2, 3 4, NAV NAVW)
+COMBO(bt_3, &bt BT_SEL 3, 0 1, NAV NAVW)
