--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -29,7 +29,8 @@ COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 COMBO(zthal, &kp N, 23 24, ARAQ) // ى
 COMBO(YA2, &kp Z, 20 21, ARAQ) // ئ
-COMBO(space, &kp SPACE, 12 13, SYM SYMW) // space on SYM
+COMBO(dot, &kp DOT, 12 13, SYM SYMW) // .
+COMBO(comma, &kp COMMA, 11 12, SYM SYMW) // ,
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ CUS CUSW)
@@ -47,14 +48,16 @@ COMBO(undow, &kp LC(Z), 13 14, COLW ARAQ CUSW)
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ CUS CUSW)
 
 /* misc */
-COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 11 26, COL CUS)
-COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 11 26, COLW ARAQ CUSW)
-COMBO(pwrtys, &kp LG(SPACE), 26 29, COLW ARAQ CUSW)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ CUSW)
+COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 11 12 26, COL CUS)
+COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 11 12 26, COLW ARAQ CUSW)
+COMBO(alfred, &kp LG(SPACE), 12 13 26, COL CUS)
+COMBO(pwrtys, &kp LG(SPACE), 12 13 26, COLW ARAQ CUSW)
 COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ CUS CUSW)
 COMBO(key_repeat, &key_repeat, 23 24, COL COLW ARAQ CUS CUSW)
 COMBO(lock_screen, &kp LG(LC(Q)), 6 7 8, NAV)
 COMBO(lock_screenw, &kp LG(L), 6 7 8, NAVW)
+COMBO(sym1h, &macro_sym, 26 27, COL CUS)
+COMBO(sym1hw, &macro_symW, 26 27, COLW ARAQ CUSW)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 11 12 13, NAV NAVW)
@@ -70,9 +73,6 @@ COMBO(bt_3, &bt BT_SEL 3, 0 1, NAV NAVW)
   };
   
 /* mac | win */
-GCOMBO(switch_to_mac, &to COL, 12 13 26)
-GCOMBO(switch_to_win, &to COLW, 16 17 29)
-GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
-
-GCOMBO(switch_to_cus_mac, &to CUS, 10 11 26)
-GCOMBO(switch_to_cus_win, &to CUSW, 18 19 29)
+GCOMBO(switch_to_mac, &to COL, 0 10)
+GCOMBO(switch_to_win, &to COLW, 9 19)
+GCOMBO(switch_to_ara, &to ARAQ, 8 9 19)
