delete word combo on nav

--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -40,12 +40,14 @@ COMBO(right_parenthesis, &kp RPAR, 7 17, COL COLW ARAQ CUS CUSW)
 COMBO(left_brace, &kp LBRC, 3 13, COL COLW ARAQ CUS CUSW)
 COMBO(right_brace, &kp RBRC, 6 16, COL COLW ARAQ CUS CUSW)
 
-/* Text processing */
+/* Text */
 COMBO(redo, &kp LG(LS(Z)), 3 4, COL CUS)
 COMBO(undo, &kp LG(Z), 13 14, COL CUS)
 COMBO(redow, &kp LC(Y), 3 4, COLW ARAQ CUSW)
 COMBO(undow, &kp LC(Z), 13 14, COLW ARAQ CUSW)
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ CUS CUSW)
+COMBO(delete_word, &kp LA(BACKSPACE), 2 12, NAV)
+COMBO(delete_wordw, &kp LC(BACKSPACE), 2 12, NAVW)
 
 /* misc */
 COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 11 12 26, COL CUS)
