add alt layout again.

--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -78,3 +78,6 @@ COMBO(bt_3, &bt BT_SEL 3, 0 1, NAV NAVW)
 GCOMBO(switch_to_mac, &to COL, 0 10)
 GCOMBO(switch_to_win, &to COLW, 9 19)
 GCOMBO(switch_to_ara, &to ARAQ, 8 9 19)
+
+GCOMBO(switch_to_cus_mac, &to CUS, 0 10 26)
+GCOMBO(switch_to_cus_win, &to CUSW, 9 19 29)
