alpha no qwerty

--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -27,7 +27,7 @@ compatible = "zmk,combos";
 #define ALPHA_ALL "COL CUS HDT COLW CUSW ARAQ HDTW"
 #define ALPHA_MAC "COL CUS HDT"
 #define ALPHA_WIN "COLW ARAQ CUSW HDTW"
-#define ALPHA_NO_QWERTY "COL COLW CUS CUSW HDT HDTW"
+#define ALPHA_NO_QWERTY COL\ COLW\ CUS\ CUSW\ HDT\ HDTW
 #define ALL "COL COLW CUS CUSW HDT HDTW ARAQ NAV NAVW SYM SYMW"
 
 /* Missing Alphas */
