remove quotes in combo layer definitions

--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -24,11 +24,11 @@ compatible = "zmk,combos";
     key-positions = <KEYPOS>; \
   };
 
-#define ALPHA_ALL "COL CUS HDT COLW CUSW ARAQ HDTW"
-#define ALPHA_MAC "COL CUS HDT"
-#define ALPHA_WIN "COLW ARAQ CUSW HDTW"
+#define ALPHA_ALL COL CUS HDT COLW CUSW ARAQ HDTW
+#define ALPHA_MAC COL CUS HDT
+#define ALPHA_WIN COLW ARAQ CUSW HDTW
 #define ALPHA_NO_QWERTY COL COLW CUS CUSW HDT HDTW
-#define ALL "COL COLW CUS CUSW HDT HDTW ARAQ NAV NAVW SYM SYMW"
+#define ALL COL COLW CUS CUSW HDT HDTW ARAQ NAV NAVW SYM SYMW
 
 /* Missing Alphas */
 COMBO(Z, &kp Z, 21 22, ALPHA_NO_QWERTY) // Z 
