--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -3,8 +3,8 @@
   ╭────────────────────╮ ╭────────────────────╮
   │  0   1   2   3   4 │ │  5   6   7   8   9 │
   │ 10  11  12  13  14 │ │ 15  16  17  18  19 │
-  │     20  21  22     │ │     23  24  25     │
-  ╰───────────╮ 26  27 │ │ 28  29 ╭───────────╯
+  │ 20  21  22  23  24 │ │ 25  26  27  28  29 │
+  ╰───────────╮ 30  31 │ │ 32  33 ╭───────────╯
               ╰────────╯ ╰────────╯            */
 
 compatible = "zmk,combos";
@@ -12,55 +12,55 @@ compatible = "zmk,combos";
 #define COMBO(NAME, BINDINGS, KEYPOS, LAYERS) \
   combo_##NAME { \
     bindings = <BINDINGS>; \
-    timeout-ms = <25>; \
+    timeout-ms = <35>; \
     key-positions = <KEYPOS>; \
     layers = <LAYERS>; \
   };
 
-/* Missing Alphas */
-COMBO(Z, &kp Z, 21 22, COL COLW CUS CUSW) // Z 
-COMBO(Q, &kp Q, 20 21, COL COLW CUS CUSW) // Q
-COMBO(Q2, &kp Q, 2 3, COL COLW CUS CUSW) // Q for vim wq
-COMBO(J, &kp J, 1 2, COL COLW CUS CUSW) // J 
-COMBO(slash, &kp SLASH, 24 25, COL COLW ARAQ CUS CUSW) // slash and ظ
+/* Missing alpha */
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
 COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
-COMBO(zthal, &kp N, 23 24, ARAQ) // ى
-COMBO(YA2, &kp Z, 20 21, ARAQ) // ئ
+COMBO(Z, &kp Z, 22 23, COL CUS COLW CUSW) // Z 
+COMBO(Q, &kp Q, 21 22, COL CUS COLW CUSW) // Q
+COMBO(Q2, &kp Q, 2 3, COL CUS COLW CUSW) // Q for vim wq
+COMBO(J, &kp J, 1 2, COL CUS COLW CUSW) // J 
+COMBO(slash, &kp SLASH, 27 28, COL CUS COLW CUSW) // Slash
 COMBO(dot, &kp DOT, 12 13, SYM SYMW) // .
 COMBO(comma, &kp COMMA, 11 12, SYM SYMW) // ,
 
 /* Brackets */
-COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ CUS CUSW)
-COMBO(right_bracket, &kp RBKT, 8 18, COL COLW ARAQ CUS CUSW)
-COMBO(left_parenthesis, &kp LPAR, 2 12, COL COLW ARAQ CUS CUSW)
-COMBO(right_parenthesis, &kp RPAR, 7 17, COL COLW ARAQ CUS CUSW)
-COMBO(left_brace, &kp LBRC, 3 13, COL COLW ARAQ CUS CUSW)
-COMBO(right_brace, &kp RBRC, 6 16, COL COLW ARAQ CUS CUSW)
+COMBO(left_bracket, &kp LBKT, 1 11, COL CUS COLW ARAQ CUSW)
+COMBO(right_bracket, &kp RBKT, 8 18, COL CUS COLW ARAQ CUSW)
+COMBO(left_parenthesis, &kp LPAR, 2 12, COL CUS COLW ARAQ CUSW)
+COMBO(right_parenthesis, &kp RPAR, 7 17, COL CUS COLW ARAQ CUSW)
+COMBO(left_brace, &kp LBRC, 3 13, COL CUS COLW ARAQ CUSW)
+COMBO(right_brace, &kp RBRC, 6 16, COL CUS COLW ARAQ CUSW)
+
 
 /* Text */
 COMBO(redo, &kp LG(LS(Z)), 3 4, COL CUS)
 COMBO(undo, &kp LG(Z), 13 14, COL CUS)
 COMBO(redow, &kp LC(Y), 3 4, COLW ARAQ CUSW)
 COMBO(undow, &kp LC(Z), 13 14, COLW ARAQ CUSW)
-COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ CUS CUSW)
+COMBO(select_all, &kp LG(A), 20 23, COL CUS)
+COMBO(caps_word, &caps_word, 31 32, COL CUS COLW ARAQ CUSW)
 COMBO(delete_word_l, &kp LA(BACKSPACE), 2 12, NAV)
-COMBO(delete_word_r, &kp LA(BACKSPACE), 17 24, NAV)
+COMBO(delete_word_r, &kp LA(BACKSPACE), 17 27, NAV)
 COMBO(delete_wordw_l, &kp LC(BACKSPACE), 2 12, NAVW)
-COMBO(delete_wordw_r, &kp LC(BACKSPACE), 17 24, NAVW)
+COMBO(delete_wordw_r, &kp LC(BACKSPACE), 17 27, NAVW)
+
 
 /* misc */
-COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 11 12 26, COL CUS COLW ARAQ CUSW)
-COMBO(alfred, &kp LG(SPACE), 12 13 26, COL CUS COLW ARAQ CUSW)
-COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ CUS CUSW)
-COMBO(lock_screen, &kp LG(LC(Q)), 6 7 8, NAV)
-COMBO(lock_screenw, &kp LG(L), 6 7 8, NAVW)
-COMBO(sym1h, &macro_sym, 26 27, COL CUS)
-COMBO(sym1hw, &macro_symW, 26 27, COLW ARAQ CUSW)
-COMBO(key_repeat_r, &key_repeat, 23 24, COL COLW ARAQ CUS CUSW)
-COMBO(key_repeat_l, &key_repeat, 22 14, COL COLW ARAQ CUS CUSW)
+COMBO(alfred, &kp LG(SPACE), 23 26, COL CUS COLW ARAQ CUSW)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL CUS COLW ARAQ CUSW)
+COMBO(esc, &kp ESC, 23 30, COL CUS COLW ARAQ CUSW) 
+COMBO(key_repeat_r, &key_repeat, 26 27, COL COLW ARAQ CUS CUSW)
+COMBO(key_repeat_l, &key_repeat, 23 24, COL COLW ARAQ CUS CUSW)
+
+COMBO(sym1h, &macro_sym, 30 31, COL CUS)
+COMBO(sym1hw, &macro_symW, 30 31, COLW ARAQ CUSW)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 11 12 13, NAV NAVW)
@@ -74,14 +74,11 @@ COMBO(bt_3, &bt BT_SEL 3, 0 1, NAV NAVW)
     bindings = <BINDINGS>; \
     key-positions = <KEYPOS>; \
   };
-  
+
 /* mac | win */
 GCOMBO(switch_to_mac, &to COL, 0 10)
 GCOMBO(switch_to_win, &to COLW, 9 19)
 GCOMBO(switch_to_ara, &to ARAQ, 8 9 19)
 
-GCOMBO(switch_to_cus_mac, &to CUS, 0 10 26)
-GCOMBO(switch_to_cus_win, &to CUSW, 9 19 29)
-
-GCOMBO(switch_to_cus_mac, &to HDT, 1 11 26)
-GCOMBO(switch_to_cus_win, &to HDTW, 8 18 29)
+GCOMBO(switch_to_cus_mac, &to CUS, 0 10 30)
+GCOMBO(switch_to_cus_win, &to CUSW, 9 19 33)
