revet to working state

--- a/build.yaml
+++ b/build.yaml
@@ -27,10 +27,10 @@ include:
   #   shield: battamini_left
   # - board: nice_nano_v2
   #   shield: battamini_right
-  # - board: nice_nano_v2
-  #   shield: battoota_left
-  # - board: nice_nano_v2
-  #   shield: battoota_right
+  - board: nice_nano_v2
+    shield: battoota_left
+  - board: nice_nano_v2
+    shield: battoota_right
   - board: nice_nano_v2
     shield: battootaone_left
   - board: nice_nano_v2
