--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -75,11 +75,11 @@ COMBO(key_repeat_r, &key_repeat, 23 24, ALPHA_ALL)
 COMBO(key_repeat_l, &key_repeat, 22 14, ALPHA_ALL)
 
 /* bluetooth */
-COMBO(bt_clear, &bt BT_CLR, 11 12 13, NAV NAVW)
-COMBO(bt_0, &bt BT_SEL 0, 1 2, NAV NAVW)
-COMBO(bt_1, &bt BT_SEL 1, 2 3, NAV NAVW)
-COMBO(bt_2, &bt BT_SEL 2, 3 4, NAV NAVW)
-COMBO(bt_3, &bt BT_SEL 3, 0 1, NAV NAVW)
+COMBO(bt_clear, &bt BT_CLR, 0 14, NAV NAVW)
+COMBO(bt_0, &bt BT_SEL 0, 0 1, NAV NAVW)
+COMBO(bt_1, &bt BT_SEL 1, 0 2, NAV NAVW)
+COMBO(bt_2, &bt BT_SEL 2, 0 3, NAV NAVW)
+COMBO(bt_3, &bt BT_SEL 3, 0 4, NAV NAVW)
   
 /* mac | win */
 GCOMBO(switch_to_mac, &to COL, 0 10)
