--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,8 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: settings_reset
+  # - board: nice_nano_v2
+  #   shield: settings_reset
   # - board: nice_nano_v2
   #   shield: cradio_left
   # - board: nice_nano_v2
