remove global quick tap

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -27,7 +27,8 @@ COMBO(Q, &kp Q, 21 22, COL CUS COLW CUSW) // Q
 COMBO(Q2, &kp Q, 2 3, COL CUS COLW CUSW) // Q for vim wq
 COMBO(J, &kp J, 1 2, COL CUS COLW CUSW) // J 
 COMBO(slash, &kp SLASH, 27 28, COL CUS COLW CUSW) // Slash
-COMBO(zero, &kp N0, 12 13, SYM SYMW) // 0 for when I am using 1 hand sym
+COMBO(dot, &kp DOT, 12 13, SYM SYMW) // . for sym
+COMBO(comma, &kp COMMA, 11 12, SYM SYMW) // , for sym
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, COL CUS COLW ARAQ CUSW)
@@ -36,7 +37,6 @@ COMBO(left_parenthesis, &kp LPAR, 2 12, COL CUS COLW ARAQ CUSW)
 COMBO(right_parenthesis, &kp RPAR, 7 17, COL CUS COLW ARAQ CUSW)
 COMBO(left_brace, &kp LBRC, 3 13, COL CUS COLW ARAQ CUSW)
 COMBO(right_brace, &kp RBRC, 6 16, COL CUS COLW ARAQ CUSW)
-
 
 /* Text */
 COMBO(redo, &kp LG(LS(Z)), 3 4, COL CUS)
@@ -49,7 +49,6 @@ COMBO(delete_word_l, &kp LA(BACKSPACE), 2 12, NAV)
 COMBO(delete_word_r, &kp LA(BACKSPACE), 17 27, NAV)
 COMBO(delete_wordw_l, &kp LC(BACKSPACE), 2 12, NAVW)
 COMBO(delete_wordw_r, &kp LC(BACKSPACE), 17 27, NAVW)
-
 
 /* misc */
 COMBO(alfred, &kp LG(SPACE), 23 26, COL CUS COLW ARAQ CUSW)
