Back to Hands Down Neu

--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -24,16 +24,16 @@ compatible = "zmk,combos";
     key-positions = <KEYPOS>; \
   };
 
-#define ALPHA_ALL COL HDT COLW ARAQ HDTW
-#define ALPHA_MAC COL HDT
-#define ALPHA_WIN COLW ARAQ HDTW
-#define ALPHA_NO_QWERTY COL HDT COLW HDTW
+#define ALPHA_ALL COL HDN COLW ARAQ HDNW
+#define ALPHA_MAC COL HDN
+#define ALPHA_WIN COLW ARAQ HDNW
+#define ALPHA_NO_QWERTY COL HDN COLW HDNW
 
 /* Missing Alphas */
 COMBO(Z, &kp Z, 21 22, ALPHA_NO_QWERTY) // Z 
 COMBO(Q, &kp Q, 20 21, ALPHA_NO_QWERTY) // Q
-COMBO(Q2, &kp Q, 2 3, COL COLW) // Q for vim wq
-COMBO(J, &kp J, 1 2, COL COLW) // J 
+COMBO(J, &kp J, 1 2, ALPHA_NO_QWERTY) // J 
+COMBO(V, &kp V, 2 3, ALPHA_NO_QWERTY) // V
 COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
@@ -86,5 +86,5 @@ GCOMBO(switch_to_mac, &to COL, 0 10)
 GCOMBO(switch_to_win, &to COLW, 9 19)
 GCOMBO(switch_to_ara, &to ARAQ, 8 9 19)
 
-GCOMBO(switch_to_hdt_mac, &to HDT, 0 10 26)
-GCOMBO(switch_to_hdt_win, &to HDTW, 9 19 29)
+GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
+GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 29)
