--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -31,9 +31,9 @@ compatible = "zmk,combos";
 
 /* Missing Alphas */
 COMBO(Z, &kp Z, 21 22, ALPHA_NO_QWERTY) // Z 
-COMBO(Q, &kp Q, 20 21, ALPHA_NO_QWERTY) // Q
+COMBO(V, &kp V, 20 21, ALPHA_NO_QWERTY) // Q
 COMBO(J, &kp J, 1 2, ALPHA_NO_QWERTY) // J 
-COMBO(V, &kp V, 2 3, ALPHA_NO_QWERTY) // V
+COMBO(Q, &kp Q, 2 3, ALPHA_NO_QWERTY) // V
 COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
