--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -39,6 +39,8 @@ COMBO(undo, &kp LG(Z), 12 13, COL HDN)
 COMBO(redow, &kp LC(Y), 2 3, COLW ARAQ HDNW)
 COMBO(undow, &kp LC(Z), 12 13, COLW ARAQ HDNW)
 COMBO(caps_word, &caps_word, 31 32, COL HDN COLW ARAQ HDNW)
+COMBO(key_repeat_r, &key_repeat, 23 24, COL HDN COLW ARAQ HDNW)
+COMBO(key_repeat_l, &key_repeat, 25 26, COL HDN COLW ARAQ HDNW)
 
 COMBO(alfred, &kp LG(SPACE), 21 23, COL HDN COLW ARAQ HDNW)
 COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 21 22 23, COL HDN COLW ARAQ HDNW)
