--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -31,10 +31,9 @@ compatible = "zmk,combos";
 
 /* Missing Alphas */
 COMBO(Z, &kp Z, 21 22, ALPHA_NO_QWERTY) // Z 
-COMBO(Q, &kp Q, 1 2, HDN HDNW) // Q
-COMBO(Q_COL, &kp Q, 20 21, COL COLW) // Q
-COMBO(J, &kp J, 1 2, COL COLW) // J 
-COMBO(V, &kp V, 20 21, HDN HDNW) // V
+COMBO(Q, &kp Q, 2 3, ALPHA_NO_QWERTY) // Q
+COMBO(J, &kp J, 1 2, ALPHA_NO_QWERTY) // J 
+COMBO(V, &kp V, 20 21, ALPHA_NO_QWERTY) // V
 COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
