--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -17,39 +17,44 @@ compatible = "zmk,combos";
     layers = <LAYERS>; \
   };
 
+#define ALPHA_ALL HDN ARAQ HDNW
+#define ALPHA_MAC HDN
+#define ALPHA_WIN ARAQ HDNW
+#define ALPHA_NO_QWERTY HDN HDNW
+
 /* Missing alpha */
 COMBO(taaa, &kp SQT, 17 18, ARAQ) // ط
 COMBO(geem, &kp LBKT, 5 6, ARAQ) // ج
 COMBO(daal, &kp RBKT, 6 7, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
-// COMBO(Z, &kp Z, 22 23, COL HDN COLW HDNW) // Z 
-// COMBO(Q, &kp Q, 21 22, COL HDN COLW HDNW) // Q
+// COMBO(Z, &kp Z, 22 23, ALPHA_NO_QWERTY) // Z 
+// COMBO(Q, &kp Q, 21 22, ALPHA_NO_QWERTY) // Q
 
 /* Brackets */
-COMBO(left_bracket, &kp LBKT, 0 10, COL HDN COLW ARAQ HDNW)
-COMBO(right_bracket, &kp RBKT, 7 17, COL HDN COLW ARAQ HDNW)
-COMBO(left_parenthesis, &kp LPAR, 1 11, COL HDN COLW ARAQ HDNW)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL HDN COLW ARAQ HDNW)
-COMBO(left_brace, &kp LBRC, 2 12, COL HDN COLW ARAQ HDNW)
-COMBO(right_brace, &kp RBRC, 5 15, COL HDN COLW ARAQ HDNW)
+COMBO(left_bracket, &kp LBKT, 0 10, ALPHA_ALL)
+COMBO(right_bracket, &kp RBKT, 7 17, ALPHA_ALL)
+COMBO(left_parenthesis, &kp LPAR, 1 11, ALPHA_ALL)
+COMBO(right_parenthesis, &kp RPAR, 6 16, ALPHA_ALL)
+COMBO(left_brace, &kp LBRC, 2 12, ALPHA_ALL)
+COMBO(right_brace, &kp RBRC, 5 15, ALPHA_ALL)
 
 /* Text */
-COMBO(redo, &kp LG(LS(Z)), 2 3, COL HDN)
-COMBO(undo, &kp LG(Z), 12 13, COL HDN)
-COMBO(redow, &kp LC(Y), 2 3, COLW ARAQ HDNW)
-COMBO(undow, &kp LC(Z), 12 13, COLW ARAQ HDNW)
-COMBO(caps_word, &caps_word, 31 32, COL HDN COLW ARAQ HDNW)
-COMBO(key_repeat_r, &key_repeat, 23 24, COL HDN COLW ARAQ HDNW)
-COMBO(key_repeat_l, &key_repeat, 25 26, COL HDN COLW ARAQ HDNW)
+COMBO(redo, &kp LG(LS(Z)), 2 3, ALPHA_MAC)
+COMBO(undo, &kp LG(Z), 12 13, ALPHA_MAC)
+COMBO(redow, &kp LC(Y), 2 3, ALPHA_WIN)
+COMBO(undow, &kp LC(Z), 12 13, ALPHA_WIN)
+COMBO(caps_word, &caps_word, 31 32, ALPHA_ALL)
+COMBO(key_repeat_r, &key_repeat, 23 24, ALPHA_ALL)
+COMBO(key_repeat_l, &key_repeat, 25 26, ALPHA_ALL)
 
-COMBO(alfred, &kp LG(SPACE), 21 23, COL HDN COLW ARAQ HDNW)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 21 22 23, COL HDN COLW ARAQ HDNW)
-COMBO(esc, &kp ESC, 23 30, COL HDN COLW ARAQ HDNW) 
+COMBO(alfred, &kp LG(SPACE), 21 23, ALPHA_ALL)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 21 22 23, ALPHA_ALL)
+COMBO(esc, &kp ESC, 23 30, ALPHA_ALL) 
 COMBO(up, &kp UP, 22 23, NAV NAVW)
 COMBO(down, &kp DOWN, 21 22, NAV NAVW)
 
-COMBO(sym1h, &macro_sym, 30 31, COL HDN)
-COMBO(sym1hw, &macro_symW, 30 31, COLW ARAQ HDNW)
+COMBO(sym1h, &macro_sym, 30 31, ALPHA_MAC)
+COMBO(sym1hw, &macro_symW, 30 31, ALPHA_WIN)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 8 13, NAV NAVW)
@@ -65,9 +70,6 @@ COMBO(bt_3, &bt BT_SEL 3, 0 9, NAV NAVW)
   };
 
 /* mac | win */
-GCOMBO(switch_to_mac, &to COL, 9 20)
-GCOMBO(switch_to_win, &to COLW, 18 29)
-GCOMBO(switch_to_ara, &to ARAQ, 7 18 29 )
-
-GCOMBO(switch_to_cus_mac, &to HDN, 8 9 20)
-GCOMBO(switch_to_cus_win, &to HDNW, 18 19 29)
+GCOMBO(switch_to_mac, &to HDN, 8 9 20)
+GCOMBO(switch_to_win, &to HDNW, 18 19 29)
+GCOMBO(switch_to_ara, &to ARAQ, 7 18 29)
