--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,11 @@ include:
     shield: battoota_left
   - board: nice_nano_v2
     shield: battoota_right
+  # - board: nice_nano_v2
+  #   shield: basbousa_left
+  # - board: nice_nano_v2
+  #   shield: basbousa_right
   - board: nice_nano_v2
-    shield: basbousa_left
+    shield: konafa_left
   - board: nice_nano_v2
-    shield: basbousa_right
+    shield: konafa_right
