--- a/config/combos32.dtsi
+++ b/config/combos32.dtsi
@@ -33,7 +33,7 @@ compatible = "zmk,combos";
 COMBO(Q, &kp Q, 21 22, ALPHA_NO_QWERTY) // Q 
 COMBO(Z, &kp Z, 20 21, ALPHA_NO_QWERTY) // Z
 COMBO(QR, &kp Q, 25 26, HDNR HDNWR) // Q 
-COMBO(ZR, &kp Z, 26 27, HDNR HDNRW) // Z
+COMBO(ZR, &kp Z, 26 27, HDNR HDNWR) // Z
 COMBO(dot, &kp DOT, 12 13, SYM SYMW) // . for sym
 COMBO(comma, &kp COMMA, 11 12, SYM SYMW) // , for sym
 
